# rust_build_utils

./: .gitignore  CHANGELOG.md  README.md  requirements.txt
.github/workflows/: docker.yml  linters.yml  test_build_docker.yml  test_build_native.yml  tests.yml
aar_templates/: __AndroidManifest.xml  __build.gradle  __init.gradle
builders/build-android-rust/: Dockerfile
builders/build-linux-rust/: Dockerfile
builders/build-windows-rust/: Dockerfile
builders/openwrt-armv7/: Dockerfile
builders/openwrt-armv8/: Dockerfile
builders/openwrt-mediatek-filogic/: Dockerfile
builders/openwrt-ramips-mt7621/: Dockerfile
builders/openwrt-x86_64/: Dockerfile
builders/package-aar/: Dockerfile
builders/package-aar-jdk-17/: Dockerfile
builders/package-openwrt/: package.sh
builders/package-qnap/: Dockerfile
builders/test-nudler-nordvpn/: Dockerfile
rust_build_utils/: android_build_utils.py  darwin_build_utils.py  linux_build_utils.py  msvc.py  rust_utils.py  rust_utils_config.py
rust_sample/: Cargo.toml
rust_sample/.cargo/: config
rust_sample/ci/: build_sample.py
rust_sample/ci/swift_package/: Package.swift
rust_sample/ci/swift_package/Sources/: CiHelperScriptsSwift.swift
rust_sample/crates/rust-sample-lib/: Cargo.toml
rust_sample/crates/rust_sample_pack/: Cargo.toml
rust_sample/crates/rust_sample_pack/src/: main.rs
rust_sample/ffi/: module.modulemap  rust_sample.h
rust_sample/ffi/java/com/nordsec/rust_sample/: rust_sample.kt
rust_sample/src/: lib.rs  sample.udl
rust_sample/templates/: __build.gradle  __init.gradle
