[package]
name = "rust_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "example_binary"
path = "src/main.rs"

[dependencies]

[workspace]
members = ["crates/*"]