[package]
name = "rust_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "example_binary"
path = "src/main.rs"

[dependencies]
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.17.0", default-features = false }

[workspace]
members = ["crates/*"]
